k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prispulsen
  labels:
    app.kubernetes.io/name: prispulsen
