k8s/prispulsen.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: prispulsen

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: prispulsen
spec:
  serviceName: postgres
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: prispulsen
spec:
  selector:
    app: postgres
  ports:
    - port: 5432

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: prispulsen-ingestion
  namespace: prispulsen
spec:
  selector:
    matchLabels:
      app: prispulsen-ingestion
  template:
    metadata:
      labels:
        app: prispulsen-ingestion
    spec:
      containers:
        - name: ingestion
          image: hadidabeast/prispulsen-ingestion:latest
---

apiVersion: v1
kind: Service
metadata:
  name: prispulsen-ingestion
  namespace: prispulsen
spec:
  selector:
    app: prispulsen-ingestion
  ports:
    - port: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: prispulsen-api
  namespace: prispulsen
spec:
  selector:
    matchLabels:
      app: prispulsen-api
  template:
    metadata:
      labels:
        app: prispulsen-api
    spec:
      containers:
        - name: api
          image: hadidabeast/prispulsen-api:latest
---

apiVersion: v1
kind: Service
metadata:
  name: prispulsen-api
  namespace: prispulsen
spec:
  selector:
    app: prispulsen-api
  ports:
    - port: 8001

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prispulsen-ingress
  namespace: prispulsen
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prispulsen-api
                port:
                  number: 8001
